# autonomous-enterprise

./: .env.example  .gitignore  CLAUDE.md  IMPLEMENTATION_SUMMARY.md  MCP_INTEGRATION_SUMMARY.md  MCP_PHASE1_CHECKLIST.md  MCP_PHASE1_IMPLEMENTATION.md  README.md  SAFETY_INTEGRATION_EXAMPLE.md  SAFETY_MODULE_SUMMARY.md  package.json  pnpm-lock.yaml
apps/api/: Dockerfile  README.md  alembic.ini  pyproject.toml
apps/api/ae_api/: __init__.py  config.py  main.py
apps/api/ae_api/api/v1/: router.py
apps/api/ae_api/db/: session.py
apps/api/ae_api/economy/: ARCHITECTURE.md  QUICK_START.md  README.md  __init__.py  classifier.py  router.py
apps/api/ae_api/genesis/: __init__.py  niche_identification.py  validator_agent.py
apps/api/ae_api/observability/: otel.py
apps/api/ae_api/orchestration/: __init__.py  ids.py  temporal_client.py
apps/api/ae_api/rag/: schemas.py  vectorstore.py
apps/api/ae_api/safety/: ARCHITECTURE.md  QUICK_REFERENCE.md  README.md  __init__.py  approvals.py  budgets.py  policies.py  redaction.py
apps/api/ae_api/services/: __init__.py  artifact_store.py  netlify_service.py  stripe_service.py  vercel_service.py
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20241216_0001_initial_schema.py  20241217_0002_add_missing_fk_indexes.py  20241217_0002_add_missing_indexes.py  20241219_0002_add_indexes.py  20241221_0002_add_foreign_key_indexes.py  20241221_0002_add_missing_indexes.py  20260107_1505_f900e7849245_add_index_to_foreign_keys.py  20260126_1521_47c24d6affcf_add_missing_indexes.py  20260130_0002_add_missing_indexes.py
apps/api/examples/: model_router_example.py
apps/api/tests/: test_db_performance.py  test_model_router.py  test_runs.py  test_runs_perf.py  test_runs_performance.py  test_safety.py
(+123 files in other folders)
